<resources>
    <string name="app_name">GroupProject</string>
    <string-array name="animal_array">
        <item>Bear</item>
        <item>Bird</item>
        <item>Bunny</item>
        <item>Cat</item>
        <item>Dog</item>
        <item>Fish</item>
        <item>Hamster</item>
        <item>Person</item>
        <item>Pig</item>
        <item>Squirrel</item>
    </string-array>
    <!-- main activity -->
    <string name="photo_instruction">Take a photo of an animal!</string>
    <string name="photo_button">Take Photo</string>
    <string name="save_button">Save Photo to Database</string>
    <string name="view_instruction">See Photos of Any Animal Type</string>
    <string name="photo_activity_button">Go</string>
    <string name="animal_guess">Animal Type</string>
    <string name="device_switch">Off Device</string>
    <string name="guess_button">Get Type</string>

    <!-- photo activity -->
    <string name="main_activity_button">Go Back</string>
    <string name="category"> </string>

</resources>
